# ModelNetlist

./: .gitignore  README.md  pyproject.toml
ModelNetlist/: Bus.py  Cell.py  Graphics.py  ModelNetlist.py  Net.py  Pin.py  Port.py  Schematic.py  __init__.py  nlNode.py  nlUtils.py
SimpleNetlist/: Cell.py  NetList.py  Pin.py  README.md  SimpleNetlist.py  __init__.py  nlNode.py
applications/HeapSort/: PyTxt.py  file1
applications/SCC/: combinational_loop.py  mynetlist.py
applications/SCC/netlist/: Gates.py  NetList.py  Nets.py  Pins.py  nlNode.py
applications/bfs/: .FLOPCount.py.swn  FLOPCount.py  HangingNets.py  mynetlist.py  traversal.py
applications/dfs/: convergence.py  find_path.py  mynetlist.py  skewness.py  test.py  test1.py
applications/dijkstras/: CriticalPath.py  mynetlist.py  mynetlist2.py
applications/topological_sorting/: Netlist.py  main.py
commons/: Clock.py  Graphics.py  Utils.py  __init__.py
examples/: test.py
netlist/: Gates.py  NetList.py  Nets.py  __init__.py
tests/: gscl45nm.lib
tests/schematic_tests/: highlight_test.py  routing_test.py
tests/verilog_tests/: parser.out  parsetab.py  simple.v  verilog_tests.py
